Save user search queries in a H2 database.

--- a/product-data-crawler-webapp/src/main/resources/application.properties
+++ b/product-data-crawler-webapp/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 # Workaround for Vaadin
 spring.main.allow-bean-definition-overriding=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:~/product-crawler-db;AUTO_SERVER=TRUE
+#spring.datasource.initialization-mode=always
+#spring.datasource.username=
+#spring.datasource.password=
